[package]
name = "quote"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.7.3", features = ["json"] }
hex = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
